--- a/css/raw/variants/vimix-beryl.css
+++ b/css/raw/variants/vimix-beryl.css
@@ -2,6 +2,12 @@ body, [lang] #msg_input {
   font-family: "Fira Sans Medium", sans-serif !important;
   font-weight: 400 !important; }
 
+code, pre {
+  font-family: "Fira Code" !important; }
+
+.c-mrkdwn__pre, .c-mrkdwn__quote {
+  font-family: "Fira Code" !important; }
+
 .p-channel_sidebar__banner--unreads,
 .c-mrkdwn__broadcast--mention,
 a.c-member_slug, .c-member_slug--link,
