--- a/css/variants/vimix-beryl.css
+++ b/css/variants/vimix-beryl.css
@@ -3,10 +3,10 @@ body, [lang] #msg_input {
   font-weight: 400 !important; }
 
 code, pre {
-  font-family: "Fira Code" !important; }
+  font-family: "Fira Code Medium" !important; }
 
 .c-mrkdwn__pre, .c-mrkdwn__quote {
-  font-family: "Fira Code" !important; }
+  font-family: "Fira Code Medium" !important; }
 
 .p-channel_sidebar__banner--unreads,
 .c-mrkdwn__broadcast--mention,
