--- a/scss/themes/_vimix-beryl.scss
+++ b/scss/themes/_vimix-beryl.scss
@@ -50,10 +50,10 @@ body, [lang] #msg_input {
 }
 
 code, pre {
-  font-family: "Fira Code" !important;
+  font-family: "Fira Code Medium" !important;
 }
 .c-mrkdwn__pre, .c-mrkdwn__quote {
-  font-family: "Fira Code" !important;
+  font-family: "Fira Code Medium" !important;
 }
 
 .p-channel_sidebar__banner--unreads,
