--- a/scss/themes/_vimix-beryl.scss
+++ b/scss/themes/_vimix-beryl.scss
@@ -203,7 +203,8 @@ body:not(.loading) #team_menu.active,
 .p-threads_view_root,
 .p_threads_view_load_older_button,
 .p-threads_view__footer,
-.p-threads_view_reply {
+.p-threads_view_reply,
+.p-unreads_view__spacer--bottom {
   border-color: $color-shade-light !important;
 }
 
@@ -219,7 +220,8 @@ body:not(.loading) #team_menu.active,
   border-top-color: $color-shade-dark !important;
 }
 
-.p-threads_flexpane__separator_count {
+.p-threads_flexpane__separator_count,
+.p-classic_nav__channel_header__subtitle {
   color: darken($base-font-color, 10%);
 }
 
