--- a/css/variants/vimix-beryl.css
+++ b/css/variants/vimix-beryl.css
@@ -12,7 +12,10 @@ code, pre {
 .c-mrkdwn__broadcast--mention,
 a.c-member_slug, .c-member_slug--link,
 .c-mrkdwn__subteam--link,
-.c-button--outline {
+.c-button--outline,
+.c-multi_select_input,
+.c-multi_select_input__input[type=text],
+.p-dm_browser_modal__list_row--active {
   background: #222426;
   color: #839496; }
 
@@ -135,7 +138,8 @@ body:not(.loading) #team_menu.active,
   border-top-color: #222426 !important; }
 
 .p-threads_flexpane__separator_count,
-.p-classic_nav__channel_header__subtitle {
+.p-classic_nav__channel_header__subtitle,
+.p-dm_browser_modal__list_heading {
   color: #d1d1d1; }
 
 .ts-message.message:hover,
