--- a/scss/themes/_vimix-beryl.scss
+++ b/scss/themes/_vimix-beryl.scss
@@ -225,8 +225,15 @@ body:not(.loading) #team_menu.active,
 
 .p-threads_flexpane__separator_count,
 .p-classic_nav__channel_header__subtitle,
-.p-dm_browser_modal__list_heading {
+.p-dm_browser_modal__list_heading,
+.c-base_entity__metadata,
+.c-base_entity__subtext,
+.p-dm_browser_modal__list_row_meta {
   color: darken($base-font-color, 10%);
+}
+
+.p-unreads_view__header--was_marked {
+  box-shadow: inset 0 -1px $color-shade-dark;
 }
 
 .ts-message.message:hover,
