--- a/scss/themes/_vimix-beryl.scss
+++ b/scss/themes/_vimix-beryl.scss
@@ -228,7 +228,8 @@ body:not(.loading) #team_menu.active,
 .p-dm_browser_modal__list_heading,
 .c-base_entity__metadata,
 .c-base_entity__subtext,
-.p-dm_browser_modal__list_row_meta {
+.p-dm_browser_modal__list_row_meta,
+.c-fullscreen_modal__body {
   color: darken($base-font-color, 10%);
 }
 
