--- a/scss/themes/_vimix-beryl.scss
+++ b/scss/themes/_vimix-beryl.scss
@@ -95,6 +95,12 @@ body:not(.loading) #team_menu.active,
   background: linear-gradient(0deg,$color-shade-darkest,hsla(0,0%,100%,0) 40px);
 }
 
+.c-pillow_file__snippet__content .CodeMirror,
+.c-pillow_file__snippet__content .CodeMirror-code>div:before {
+  background: $color-shade-dark;
+  color: $base-link-color;
+}
+
 #footer {
   padding-top: 1em;
   box-shadow: inset 0 5px 0 0 $color-shade-dark;
