--- a/css/variants/vimix-beryl.css
+++ b/css/variants/vimix-beryl.css
@@ -41,6 +41,11 @@ body:not(.loading) #team_menu.active,
 .c-pillow_file__content--collapsed:after {
   background: linear-gradient(0deg, #161719, rgba(255, 255, 255, 0) 40px); }
 
+.c-pillow_file__snippet__content .CodeMirror,
+.c-pillow_file__snippet__content .CodeMirror-code > div:before {
+  background: #222426;
+  color: #839496; }
+
 #footer, #footer.footer_msg_input {
   padding-top: 1em;
   box-shadow: inset 0 5px 0 0 #222426; }
