--- a/css/variants/vimix-beryl.css
+++ b/css/variants/vimix-beryl.css
@@ -38,6 +38,9 @@ body:not(.loading) #team_menu.active,
 .c-app_badge {
   color: #839496; }
 
+.c-pillow_file_container {
+  max-width: auto; }
+
 .c-pillow_file__content--collapsed:after {
   background: linear-gradient(0deg, #161719, rgba(255, 255, 255, 0) 40px); }
 
