--- a/scss/themes/_vimix-beryl.scss
+++ b/scss/themes/_vimix-beryl.scss
@@ -92,7 +92,7 @@ body:not(.loading) #team_menu.active,
 }
 
 .c-pillow_file_container {
- max-width: auto !important;
+ max-width: 100% !important;
 }
 
 .c-pillow_file__content--collapsed:after {
