--- a/css/variants/vimix-beryl.css
+++ b/css/variants/vimix-beryl.css
@@ -123,7 +123,8 @@ body:not(.loading) #team_menu.active,
 .p_threads_view_load_older_button,
 .p-unreads_view__header,
 .p-classic_nav__channel_header__title,
-.p-classic_nav__no_drag {
+.p-classic_nav__no_drag,
+.c-message_attachment__author_name {
   background: #2e3034 !important;
   color: #eaeaea !important; }
 
