--- a/scss/themes/_vimix-beryl.scss
+++ b/scss/themes/_vimix-beryl.scss
@@ -17,7 +17,7 @@ $cyan: #2aa198;
 $green: #7da900;
 $vimix: #36393e;
 
-$base-font-family: 'Fira Sans Medium';
+$base-font-family: 'Noto Sans';
 
 // Theme Colors
 $color-base: $base03;
