--- a/css/raw/variants/vimix-beryl.css
+++ b/css/raw/variants/vimix-beryl.css
@@ -1,6 +1,5 @@
 body, [lang] #msg_input {
-  font-family: "Noto Sans", sans-serif !important;
-  font-weight: 400 !important; }
+  font-family: "Noto Sans", sans-serif !important; }
 
 code, pre {
   font-family: "Fira Code Medium" !important; }
