--- a/scss/themes/_vimix-beryl.scss
+++ b/scss/themes/_vimix-beryl.scss
@@ -47,7 +47,7 @@ $base-link-color-active: $red;
 
 body, [lang] #msg_input {
   font-family: $base-font-family, sans-serif !important;
-  font-weight: 400 !important;
+  //font-weight: 400 !important;
 }
 
 code, pre {
