--- a/scss/themes/_vimix-beryl.scss
+++ b/scss/themes/_vimix-beryl.scss
@@ -48,6 +48,7 @@ $base-link-color-active: $red;
 body, [lang] #msg_input {
   font-family: $base-font-family, sans-serif !important;
   //font-weight: 400 !important;
+  font-size: 12px;
 }
 
 code, pre {
