--- a/css/raw/variants/vimix-beryl.css
+++ b/css/raw/variants/vimix-beryl.css
@@ -1,4 +1,4 @@
-body, [lang] #msg_input {
+body, [lang] #msg_input, [lang] .c-message {
   font-family: "Noto Sans", sans-serif !important;
   font-size: 12px; }
 
